fix wierd scrolling overflow issue

--- a/main.css
+++ b/main.css
@@ -256,7 +256,7 @@ h3 {
 .image-card p {
   font-family: openSansRegular;
   color:black;
-  font-size: 0.9em;
+  font-size: 1em;
   margin-bottom: 0;
 }
 .card-body {
